Changed inline code background to light grey

--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -14,7 +14,12 @@ h3 {
 
 /* Syntax Highlighting*/
 
-body :not(pre) > code[class*="language-"],
+/* Block code */
 body pre[class*="language-"] {
   @apply bg-gray-800;
+}
+
+/* Inline code */
+body :not(pre) > code[class*="language-"] {
+  @apply bg-gray-200;
 }
