--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -22,4 +22,6 @@ body pre[class*="language-"] {
 /* Inline code */
 body :not(pre) > code[class*="language-"] {
   @apply bg-gray-100;
+  @apply px-8;
+  @apply py-4;
 }
