Attempting to add numbers to ordered list

--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -14,6 +14,10 @@ h3 {
 
 /* Syntax Highlighting*/
 
+body ol {
+  @apply list-decimal;
+}
+
 /* Block code */
 body pre[class*="language-"] {
   @apply bg-gray-800;
