--- a/src/_includes/posts.html
+++ b/src/_includes/posts.html
@@ -15,7 +15,7 @@ prism: true
         </p>
 
     </div>
-    <article class="prose lg:prose-xl my-4 mx-auto">
+    <article class="prose lg:prose-xl my-4 mx-auto prose-code:before:content-none prose-code:after:content-none">
         {{ content | safe }}</article>
 
 </div>
