--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -15,9 +15,9 @@ h3 {
 /* Syntax Highlighting*/
 
 /* Block code */
-.prose pre[class*="language-"] {
+/* .prose pre[class*="language-"] {
   @apply bg-gray-800;
-}
+} */
 
 /* Inline code */
 .prose :not(pre) > code[class*="language-"] {
